--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://vitals.vercel-insights.com/v1/vitals.js" data-strategy="blocking"></script>
   </body>
 </html>
